{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 126,
  "lineage": "e64ccb3d-348a-2a48-8a73-832606c6d12e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050dfc9b38fef8a8a",
            "arn": "arn:aws:ec2:us-east-1:931463883124:elastic-ip/eipalloc-050dfc9b38fef8a8a",
            "domain": "vpc",
            "id": "eipalloc-050dfc9b38fef8a8a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-1-212-244.compute-1.amazonaws.com",
            "public_ip": "52.1.212.244",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags_all": {
              "Owner": "rahul",
              "Project": "vpc-firewall"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:931463883124:instance/i-0b650e0d0324e2363",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-instance-profile",
            "id": "i-0b650e0d0324e2363",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.4xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03c7fe9e09f495f22"
              }
            ],
            "primary_network_interface_id": "eni-03c7fe9e09f495f22",
            "private_dns": "ip-10-0-3-203.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.203",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Owner": "rahul",
                  "Project": "vpc-firewall"
                },
                "tags_all": {
                  "Owner": "rahul",
                  "Project": "vpc-firewall"
                },
                "throughput": 125,
                "volume_id": "vol-0240201a04af91f2c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045ac0efe76593a83",
            "tags": {
              "Name": "vpc-firewall-private-ec2"
            },
            "tags_all": {
              "Name": "vpc-firewall-private-ec2",
              "Owner": "rahul",
              "Project": "vpc-firewall"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02f6a21a901f2a730"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "931463883124",
            "id": "i-0b650e0d0324e2363",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.ec2_sg",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:931463883124:internet-gateway/igw-085849b85b106b61e",
            "id": "igw-085849b85b106b61e",
            "owner_id": "931463883124",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-firewall-igw"
            },
            "tags_all": {
              "Name": "vpc-firewall-igw",
              "Owner": "rahul",
              "Project": "vpc-firewall"
            },
            "vpc_id": "vpc-0a75432e0feb849b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050dfc9b38fef8a8a",
            "association_id": "eipassoc-05daa34d2723676e5",
            "connectivity_type": "public",
            "id": "nat-045e4d1681d9fd764",
            "network_interface_id": "eni-06eb9372daa2aefa7",
            "private_ip": "10.0.1.243",
            "public_ip": "52.1.212.244",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0555ccf0823535e5b",
            "tags": {
              "Name": "vpc-firewall-nat-gateway"
            },
            "tags_all": {
              "Name": "vpc-firewall-nat-gateway",
              "Owner": "rahul",
              "Project": "vpc-firewall"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_to_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.3.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05d078f0097c698471225609819",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-05d078f0097c69847",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0e18e80ba874bb9ff",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "931463883124",
            "destination_cidr_block": "10.0.3.0/24",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-05d078f0097c69847"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_networkfirewall_firewall.main",
            "aws_networkfirewall_firewall_policy.policy",
            "aws_networkfirewall_rule_group.block_social",
            "aws_route_table.public",
            "aws_subnet.firewall",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:931463883124:route-table/rtb-06b9e839c3b8188e3",
            "id": "rtb-06b9e839c3b8188e3",
            "owner_id": "931463883124",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-045e4d1681d9fd764",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-firewall-firewall-rt"
            },
            "tags_all": {
              "Name": "vpc-firewall-firewall-rt",
              "Owner": "rahul",
              "Project": "vpc-firewall"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a75432e0feb849b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "931463883124",
            "id": "rtb-06b9e839c3b8188e3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:931463883124:route-table/rtb-0b4a74ad51ad13030",
            "id": "rtb-0b4a74ad51ad13030",
            "owner_id": "931463883124",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0e18e80ba874bb9ff",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-firewall-private-rt"
            },
            "tags_all": {
              "Name": "vpc-firewall-private-rt",
              "Owner": "rahul",
              "Project": "vpc-firewall"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a75432e0feb849b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "931463883124",
            "id": "rtb-0b4a74ad51ad13030",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_networkfirewall_firewall.main",
            "aws_networkfirewall_firewall_policy.policy",
            "aws_networkfirewall_rule_group.block_social",
            "aws_subnet.firewall",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:931463883124:route-table/rtb-05d078f0097c69847",
            "id": "rtb-05d078f0097c69847",
            "owner_id": "931463883124",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-085849b85b106b61e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-firewall-public-rt"
            },
            "tags_all": {
              "Name": "vpc-firewall-public-rt",
              "Owner": "rahul",
              "Project": "vpc-firewall"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a75432e0feb849b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "931463883124",
            "id": "rtb-05d078f0097c69847",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045df3d697bcbe1d0",
            "region": "us-east-1",
            "route_table_id": "rtb-06b9e839c3b8188e3",
            "subnet_id": "subnet-0c8578f6271bfebb0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.main",
            "aws_route_table.firewall",
            "aws_subnet.firewall",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0783edda2ac34e30f",
            "region": "us-east-1",
            "route_table_id": "rtb-0b4a74ad51ad13030",
            "subnet_id": "subnet-045ac0efe76593a83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_networkfirewall_firewall.main",
            "aws_networkfirewall_firewall_policy.policy",
            "aws_networkfirewall_rule_group.block_social",
            "aws_route_table.private",
            "aws_subnet.firewall",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0038eb243967e60e8",
            "region": "us-east-1",
            "route_table_id": "rtb-05d078f0097c69847",
            "subnet_id": "subnet-0555ccf0823535e5b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:931463883124:security-group/sg-02f6a21a901f2a730",
            "description": "allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f6a21a901f2a730",
            "ingress": [],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "931463883124",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Owner": "rahul",
              "Project": "vpc-firewall"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a75432e0feb849b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "931463883124",
            "id": "sg-02f6a21a901f2a730",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:931463883124:subnet/subnet-0c8578f6271bfebb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8578f6271bfebb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931463883124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-firewall-firewall-subnet"
            },
            "tags_all": {
              "Name": "vpc-firewall-firewall-subnet",
              "Owner": "rahul",
              "Project": "vpc-firewall"
            },
            "vpc_id": "vpc-0a75432e0feb849b9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "931463883124",
            "id": "subnet-0c8578f6271bfebb0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:931463883124:subnet/subnet-045ac0efe76593a83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045ac0efe76593a83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931463883124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-firewall-private-subnet"
            },
            "tags_all": {
              "Name": "vpc-firewall-private-subnet",
              "Owner": "rahul",
              "Project": "vpc-firewall"
            },
            "vpc_id": "vpc-0a75432e0feb849b9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "931463883124",
            "id": "subnet-045ac0efe76593a83",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:931463883124:subnet/subnet-0555ccf0823535e5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0555ccf0823535e5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931463883124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-firewall-public-subnet"
            },
            "tags_all": {
              "Name": "vpc-firewall-public-subnet",
              "Owner": "rahul",
              "Project": "vpc-firewall"
            },
            "vpc_id": "vpc-0a75432e0feb849b9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "931463883124",
            "id": "subnet-0555ccf0823535e5b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:931463883124:vpc/vpc-0a75432e0feb849b9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-020d05d098c7116e8",
            "default_route_table_id": "rtb-02d0f9369e6829951",
            "default_security_group_id": "sg-08a12eefb69469c3c",
            "dhcp_options_id": "dopt-0cf8159106df8d123",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a75432e0feb849b9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d0f9369e6829951",
            "owner_id": "931463883124",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-firewall-vpc"
            },
            "tags_all": {
              "Name": "vpc-firewall-vpc",
              "Owner": "rahul",
              "Project": "vpc-firewall"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "931463883124",
            "id": "vpc-0a75432e0feb849b9",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}